syntax = "proto3";
 
option csharp_namespace = "Grpc";
 
package apitest;
 
message CreateUsersRequest {
    repeated UserRequest items = 1;
}

message UserRequest {
    string login = 1;
    string password = 2;
    string email = 3;
}
 
message CreateUsersResponse {
    repeated int32 ids = 1;
}
 
service UserService {
    rpc Create (CreateUsersRequest) returns (CreateUsersResponse);
}
